--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia</title>
+    <title>Ruh | Esencia - Productos Naturales.</title>
 </head>
 
 <body>
@@ -126,7 +126,7 @@
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
-                    <img src="img/home1.png" class="card-img-top" alt="productos">
+                    <img src="img/home1.png" class="card-img-top" alt="Productos">
                     <div class="card-body">
                         <p class="card-text">Te mostramos nuestra variedad de productos y aromas, elegi el que mas se
                             conecte con tus sentidos.</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
-                    <img src="img/home2.png" class="card-img-top" alt="CURIOSIDADES">
+                    <img src="img/home2.png" class="card-img-top" alt="Curiosidades">
                     <div class="card-body">
                         <p class="card-text">Te contamos el uso y curiosidades de nuestros productos y te compartimos
                             info. util para cuidar y estar en contacto con la naturaleza.</p>
@@ -146,7 +146,7 @@
             </div>
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
-                    <img src="img/home3.png" class="card-img-top" alt="MAYORISTA">
+                    <img src="img/home3.png" class="card-img-top" alt="Mayorista">
                     <div class="card-body">
                         <p class="card-text">Sabias que tambien podes vender nustros productos en tu local? o eleginos
                             para souvenir de tu boda o evento.</p>
@@ -169,7 +169,7 @@
                 <div class="btn nos"><a href="nosotras.html">CONOCENOS</a></div>
             </div>
             <div class="col-lg-8 col-md-9">
-                <img class="img_nosotras" src="img/nosotras.jpg" alt="nosotras">
+                <img class="img_nosotras" src="img/nosotras.jpg" alt="Nosotras">
             </div>
         </div>
     </div>
