--- a/mayorista.html
+++ b/mayorista.html
@@ -80,7 +80,7 @@
     <div class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/evento1.jpg" alt="">
+                <img src="img/evento1.jpg" alt="evento1">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -94,27 +94,27 @@
         </div>
         <div class="box-img">   
             <figure>
-                <img src="img/Evento4.png" alt="">
+                <img src="img/Evento4.png" alt="evento2">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento-1.png" alt="">
+                <img src="img/evento-1.png" alt="evento3">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/IMG_2435.jpg" alt="">
+                <img src="img/IMG_2435.jpg" alt="evento4">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/IMG_2448.jpg" alt="">
+                <img src="img/IMG_2448.jpg" alt="evento5">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento2.png" alt="">
+                <img src="img/evento2.png" alt="evento6">
             </figure>
         </div>
 
