--- a/contacto.html
+++ b/contacto.html
@@ -107,7 +107,7 @@
                         <div class="col-12 mt-5">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                title="Ubicacion-mapa" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                                 class="mapa"></iframe>
                         </div>
                     </div>
