--- a/info.html
+++ b/info.html
@@ -93,7 +93,7 @@
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body"> <section class="info1">
 
-                        <video src="img/video-sahumar.mov" autoplay muted loop></video>
+                        <video src="img/video-sahumar.mov" title="Sahumar" autoplay muted loop></video>
             
                         <article class="main_art_video">
                             <h4 class="main_art_tit">¿Que es y como SAHUMAR?</h3>
@@ -231,7 +231,7 @@
                         <div class="card mb-3" style="max-width: 1140px; margin: auto;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="img/grounding.jpg" class="img-fluid rounded-start" alt="grounding">
+                                    <img src="img/grounding.jpg" class="img-fluid rounded-start" alt="Grounding">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -283,7 +283,7 @@
                         <div class="card mb-3" style="max-width: 1140px; margin: auto;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="img/cuidado-ambiental.jpeg" class="img-fluid rounded-start" alt="ambiente">
+                                    <img src="img/cuidado-ambiental.jpeg" class="img-fluid rounded-start" alt="Ambiente">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
