cambio en el header

--- a/nosotras.html
+++ b/nosotras.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
     <title>Ruh | Esencia</title>
@@ -31,48 +31,48 @@
                     <img src="logos/face-head.png" alt="Facebook" width="40"></a>
             </div>
         </div>
-    </header>
 
-    <!-- inicio nav  -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotras.html">Nosotras</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="productos.html">
-                            Productos
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
-                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mayorista.html">Mayorista</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="info.html">+ Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
+        <!-- inicio nav  -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotras.html">Nosotras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                                <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a>
+                                </li>
+                                <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mayorista.html">Mayorista</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="info.html">+ Info</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
+        </nav>
+    </header>
 
     <!-- section 1 -->
 
@@ -95,41 +95,41 @@
 
     <!-- Section 2 -->
 
-<div class="container">
-    <div class="row justify-content-center card-nos">
-        <div class="col-lg-6 col-md-8">
-            <img src="img/jose.png" alt="Jose Ramos" class="nos_main_img">
-        <article class="nos_main_art">
-            <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define gran
-                parte
-                de
-                mi,
-                ya que los que me conocen saben cuanto disfruto y amo los momentos de conexión con la
-                naturaleza.
-                Con el
-                tiempo me di cuenta que desde chiquita le presté mucha atención a nuestro entorno y lo que pasa
-                en
-                él
-                y es por eso que de grande elegí estudiar Gestión Ambiental.</p>
-        </article>
-        </div>
-        <div class="col-lg-6 col-md-8">
-            <img src="img/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
-        <article class="nos_main_art">
-            <p>Hola, soy Mica, arquitecta y una de las fundadoras de Ruh, pero ademas, como veran,
-                tambien
-                soy profe de yoga.
-                El yoga para mi, es un camino para descubrirse todos los días, es un momento para conectarse con
-                el
-                presente y escucharse y
-                a uno mismo.
-                Me encanta acompañañar esta practica, con nuestros productos, ya que consolidan los sentidos con
-                su
-                esencia.</p>
-        </article>
+    <div class="container">
+        <div class="row justify-content-center card-nos">
+            <div class="col-lg-6 col-md-8">
+                <img src="img/jose.png" alt="Jose Ramos" class="nos_main_img">
+                <article class="nos_main_art">
+                    <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define gran
+                        parte
+                        de
+                        mi,
+                        ya que los que me conocen saben cuanto disfruto y amo los momentos de conexión con la
+                        naturaleza.
+                        Con el
+                        tiempo me di cuenta que desde chiquita le presté mucha atención a nuestro entorno y lo que pasa
+                        en
+                        él
+                        y es por eso que de grande elegí estudiar Gestión Ambiental.</p>
+                </article>
+            </div>
+            <div class="col-lg-6 col-md-8">
+                <img src="img/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
+                <article class="nos_main_art">
+                    <p>Hola, soy Mica, arquitecta y una de las fundadoras de Ruh, pero ademas, como veran,
+                        tambien
+                        soy profe de yoga.
+                        El yoga para mi, es un camino para descubrirse todos los días, es un momento para conectarse con
+                        el
+                        presente y escucharse y
+                        a uno mismo.
+                        Me encanta acompañañar esta practica, con nuestros productos, ya que consolidan los sentidos con
+                        su
+                        esencia.</p>
+                </article>
+            </div>
         </div>
     </div>
-</div>
 
     <!-- footer -->
 
@@ -156,7 +156,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
 
@@ -181,11 +181,11 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 
 </body>
 
