--- a/mayorista.html
+++ b/mayorista.html
@@ -31,52 +31,53 @@
                     <img src="logos/face-head.png" alt="Facebook" width="40"></a>
             </div>
         </div>
+
+        <!-- inicio nav  -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotras.html">Nosotras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                                <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a>
+                                </li>
+                                <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mayorista.html">Mayorista</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="info.html">+ Info</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <!-- inicio nav  -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotras.html">Nosotras</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="productos.html">
-                            Productos
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
-                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mayorista.html">Mayorista</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="info.html">+ Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <section class="mayor_tit">
-        <h2>Venta de velas por mayor;  para eventos, negocios o reventa.</h2>
+        <h2>Venta de velas por mayor; para eventos, negocios o reventa.</h2>
     </section>
-  
+
     <div class="container-img">
         <div class="box-img">
             <figure>
@@ -87,12 +88,12 @@
             <figure>
                 <p>Podes elegir modelo del envase, decoración y etiqueta (te proponemos opciones de diseño o concretamos
                     tu idea)</p>
-                    <div class="btn boton">
-                        <a href="contacto.html">ESCRIBINOS Y TE ASESORAMOS!</a>
-                    </div>
+                <div class="btn boton">
+                    <a href="contacto.html">ESCRIBINOS Y TE ASESORAMOS!</a>
+                </div>
             </figure>
         </div>
-        <div class="box-img">   
+        <div class="box-img">
             <figure>
                 <img src="img/Evento4.png" alt="">
             </figure>
