--- a/productos.html
+++ b/productos.html
@@ -18,7 +18,6 @@
 <body>
     <!-- header -->
     <header>
-
         <div class="barra">
             <div class="logo">
                 <img src="img/logo.jpg" alt="Logo" class="logo-img">
@@ -31,48 +30,48 @@
                     <img src="logos/face-head.png" alt="Facebook" width="40"></a>
             </div>
         </div>
-    </header>
 
-    <!-- inicio nav  -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotras.html">Nosotras</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="productos.html">
-                            Productos
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
-                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mayorista.html">Mayorista</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="info.html">+ Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
+        <!-- inicio nav  -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotras.html">Nosotras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                                <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a>
+                                </li>
+                                <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mayorista.html">Mayorista</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="info.html">+ Info</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
+        </nav>
+    </header>
 
     <div class="tit">
         <h2>Nuestos Productos</h2>
@@ -175,7 +174,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
 
@@ -198,7 +197,7 @@
             </section>
         </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
