--- a/info.html
+++ b/info.html
@@ -70,7 +70,7 @@
         </nav>
     </header>
     
-    <main>
+    <main class="body-info">
 
     <h2>Sobre nuestros productos...</h2>
 
@@ -79,13 +79,14 @@
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
                 <h3 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        ¿Que es y como SAHUMAR?
+                        El rirual de Sahumar
                     </button>
                 </h3>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
+
                     <div class="accordion-body"> <section class="info1">
 
                         <video src="img/video-sahumar.mov" title="Sahumar" autoplay muted loop></video>
@@ -126,9 +127,9 @@
                 </div>
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            PALO SANTO
+                            Nuestro producto estrella, el Palo Santo
                         </button>
                     </h3>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
@@ -138,7 +139,7 @@
 
                                 <article class="main_art">
 
-                                    <h4 class="main_art_tit">PALO SANTO</h4>
+                                    <h4 class="main_art_tit">Palo Santo</h4>
 
                                     <p>Muchos de ustedes conocen el Palo Santo y seguramente ya han comprobado que
                                         encenderlo es un acto
@@ -147,7 +148,7 @@
                                         armoniosas a todos
                                         que estén en contacto con este humo.</p>
 
-                                    <h5>¿ Y sabías que esta en peligro de extinción?.</h5>
+                                    <h5>¿ Pero sabías que esta en peligro de extinción?.</h5>
 
                                     <p>El palo santo es originario de sudamericana, se lo puede encontrar mayormente en
                                         ciertas regiones
@@ -173,7 +174,7 @@
 
                                 </article>
 
-                                <img src="img/palo-santo.jpg" alt="Palo Santo" class="main_img">
+                                <img src="img/palo-santo.png" alt="Palo Santo" class="main_img">
 
                             </section>
 
@@ -182,10 +183,10 @@
                 </div>
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseThree" aria-expanded="false"
                             aria-controls="flush-collapseThree">
-                            Velas de sola vs. parafina.
+                            Conoce sobre nuestras Velas
                         </button>
                     </h3>
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
@@ -193,7 +194,7 @@
                         <div class="accordion-body">
                             <section class="info1">
 
-                                <img src="img/velas-soja.jpg" alt="Velas de Soja" class="main_img">
+                                <img src="img/velas-soja.png" alt="Velas de Soja" class="main_img">
 
                                 <article class="main_art">
                                     <h4 class="main_art_tit">Velas de soja Vs Parafina.</h4>
@@ -223,28 +224,29 @@
     </div>
    
     <h2>Ser concientes de nuestra Naturaleza</h2>
+
     <div class="container">
        
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
                 <h3 class="accordion-header" id="flush-headingfour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapsefour">
-                        ¿Sabes que es el grounding?
+                        Conexion con la naturaleza
                     </button>
                 </h3>
                 <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <div class="card mb-3" style="max-width: 1140px; margin: auto;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
+                            <div class="row g-0 justify-content-center">
+                                <div class="col-md-4 col-sm-8">
                                     <img src="img/grounding.jpg" class="img-fluid rounded-start" alt="Grounding">
                                 </div>
-                                <div class="col-md-8">
+                                <div class="col-md-8 col-sm-10">
                                     <div class="card-body">
                                         <h4 class="card-title">¿Sabes que es el Grounding?</h4>
-                                        <p class="card-text">TEl grounding es una palabra que significa conectarnos con la tierra Podes
+                                        <p class="card-text">El grounding es una palabra que significa conectarnos con la tierra Podes
                                             hacerlo de distintas
                                             formas, desde
                                             caminar descalza por la tierra o pasto hasta meter los pies en el agua del río o mar. Sentarse
@@ -280,7 +282,7 @@
             </div>
             <div class="accordion-item">
                 <h3 class="accordion-header" id="flush-headingFive">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                         ¿Cuidas el medio abiente?
                     </button>
@@ -289,11 +291,11 @@
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <div class="card mb-3" style="max-width: 1140px; margin: auto;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
+                            <div class="row g-0 justify-content-center">
+                                <div class="col-md-4 col-sm-8">
                                     <img src="img/cuidado-ambiental.jpeg" class="img-fluid rounded-start" alt="Ambiente">
                                 </div>
-                                <div class="col-md-8">
+                                <div class="col-md-8 col-sm-10">
                                     <div class="card-body">
                                         <h4 class="card-title">¿Cuidas el medio Ambiente?</h4>
                                         <p class="card-text">Desde RUH somos conscientes de la problemátita ambiental y sostenemos la idea
