--- a/mayorista.html
+++ b/mayorista.html
@@ -5,14 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="keywords" content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Esencias y aromas naturales">
+    <meta property="og:description" content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
+    <!-- <meta property="og:image" content="url"> -->
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
+    <!-- enlance bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Ruh | Esencia</title>
+
+    <title>Ruh | Esencia - Productos Naturales.</title>
 </head>
 
 <body>
