--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
-    <meta name="keywords" content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+    <meta name="description"
+        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="keywords"
+        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Esencias y aromas naturales">
-    <meta property="og:description" content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+    <meta property="og:description"
+        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <!-- <meta property="og:image" content="url"> -->
 
@@ -25,8 +28,7 @@
 </head>
 
 <body>
-
-    <!-- inicio header  -->
+    <!--  header  -->
 
     <header id="header-home">
         <div class="barra">
@@ -36,7 +38,7 @@
             </div>
         </div>
 
-        <!-- inicio nav  -->
+        <!-- nav  -->
 
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -78,12 +80,12 @@
             </div>
         </nav>
     </header>
-    <!-- fin nav -->
-    <!-- fin header  -->
+
+    <!-- main  -->
 
     <!--   section 1 -->
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <section id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -122,13 +124,14 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-    </div>
-
-    <!-- seccion 2 -->
+    </section>
 
     <main class="body-home">
-        <div class="container">
-            <div class="row justify-content-center">
+
+        <!-- seccion 2 -->
+
+        <section class="container">
+            <article class="row justify-content-center">
                 <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                     <div class="card card-home">
                         <img src="img/home1.png" class="card-img-top" alt="Productos">
@@ -162,14 +165,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
 
 
         <!-- seccion 3 -->
 
-        <div class="container">
-            <div class="row justify-content-center">
+        <section class="container">
+            <article class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 home-nosotras">
                     <h2>Nosotras </h2>
                     <p>Te compartimos un poco de nosotras y de quienes estan atras de Ruh.</p>
@@ -178,8 +181,8 @@
                 <div class="col-lg-8 col-md-9">
                     <img class="img_nosotras" src="img/nosotras.jpg" alt="nosotras">
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
 
         <!-- footer -->
 
