--- a/mayorista.html
+++ b/mayorista.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
-    <meta name="keywords" content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+    <meta name="description"
+        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="keywords"
+        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Esencias y aromas naturales">
-    <meta property="og:description" content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+    <meta property="og:description"
+        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <!-- <meta property="og:image" content="url"> -->
 
@@ -26,8 +29,8 @@
 
 <body>
     <!-- header -->
-    <header>
 
+    <header>
         <div class="barra">
             <div class="logo">
                 <img src="img/logo.jpg" alt="Logo" class="logo-img">
@@ -35,7 +38,8 @@
             </div>
         </div>
 
-        <!-- inicio nav  -->
+        <!-- nav -->
+
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
@@ -77,11 +81,13 @@
         </nav>
     </header>
 
+    <!-- main -->
+
     <section class="mayor_tit">
         <h2>Venta de velas por mayor; para eventos, negocios o reventa.</h2>
     </section>
 
-    <div class="container-img">
+    <section class="container-img">
         <div class="box-img">
             <figure>
                 <img src="img/evento1.jpg" alt="evento1">
@@ -91,9 +97,9 @@
             <figure>
                 <p>Podes elegir modelo del envase, decoración y etiqueta (te proponemos opciones de diseño o concretamos
                     tu idea)</p>
-                    <div class="btn">
-                        <a href="contacto.html">ESCRIBINOS Y TE ASESORAMOS!</a>
-                    </div>
+                <div class="btn">
+                    <a href="contacto.html">ESCRIBINOS Y TE ASESORAMOS!</a>
+                </div>
             </figure>
         </div>
         <div class="box-img">
@@ -121,8 +127,9 @@
                 <img src="img/evento2.png" alt="evento6">
             </figure>
         </div>
+    </section>
 
-    </div>
+    <!-- footer -->
 
     <footer>
         <div class="foot">
