--- a/nosotras.html
+++ b/nosotras.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
-    <meta name="keywords" content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+    <meta name="description"
+        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="keywords"
+        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Esencias y aromas naturales">
-    <meta property="og:description" content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+    <meta property="og:description"
+        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <!-- <meta property="og:image" content="url"> -->
 
@@ -21,13 +24,13 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Productos Naturales.</title>tle>
+    <title>Ruh | Esencia - Productos Naturales.</title>
 </head>
 
 <body>
     <!-- header -->
-    <header>
 
+    <header>
         <div class="barra">
             <div class="logo">
                 <img src="img/logo.jpg" alt="Logo" class="logo-img">
@@ -35,7 +38,8 @@
             </div>
         </div>
 
-        <!-- inicio nav  -->
+        <!-- nav  -->
+
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
@@ -77,12 +81,13 @@
         </nav>
     </header>
 
+    <!-- main -->
+
     <!-- section 1 -->
 
     <section class="nos_portada">
         <article class="nos_portada_art">
             <h2>Nosotras</h2>
-
             <p>Ruh nace, desde la conexión con la naturaleza activando nuestros sentidos atravez de esencias, cereemos
                 que
                 es fundamental hacer pausas y darnos un espacio para desconectar y re-conectar con nosotros mismos,
@@ -98,8 +103,8 @@
 
     <!-- Section 2 -->
 
-    <div class="container">
-        <div class="row justify-content-center card-nos">
+    <section class="container">
+        <article class="row justify-content-center card-nos">
             <div class="col-lg-6 col-md-8">
                 <img src="img/jose.png" alt="Jose Ramos" class="nos_main_img">
                 <article class="nos_main_art">
@@ -131,8 +136,8 @@
                         esencia.</p>
                 </article>
             </div>
-        </div>
-    </div>
+        </article>
+    </section>
 
     <!-- footer -->
 
