--- a/productos.html
+++ b/productos.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
-    <meta name="keywords" content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+    <meta name="description"
+        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="keywords"
+        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Esencias y aromas naturales">
-    <meta property="og:description" content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+    <meta property="og:description"
+        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <!-- <meta property="og:image" content="url"> -->
 
@@ -34,7 +37,7 @@
             </div>
         </div>
 
-        <!-- inicio nav  -->
+        <!-- nav  -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
@@ -76,15 +79,14 @@
         </nav>
     </header>
 
-    <div class="tit">
+    <!-- main  -->
+
+    <section class="tit">
         <h2>Nuestos Productos</h2>
-    </div>
+    </section>
 
-    <!-- --------------------------- Agregar filtro(como listas de definicion?) ---------------------------- -->
-
-
-    <div class="container">
-            <div class="row justify-content-center">
+    <section class="container">
+        <article class="row justify-content-center">
             <section id="sahumerios"></section>
             <h3>Sahumerios</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
@@ -103,12 +105,11 @@
                 <img src="img/prod-porta-shau.png" alt="portasahumerio" class="item_img">
                 <p>Porta Sahumerio de madera</p>
             </div>
-        </div>
-    </div>
+        </article>
+    </section>
 
-
-    <div class="container">
-        <div class="row justify-content-center">
+    <section class="container">
+        <article class="row justify-content-center">
             <section id="sahumos"></section>
             <h3>Sahumos y defumadores</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
@@ -135,12 +136,11 @@
                 <img src="img/prod-sahumadores.png" alt="Sahumadores" class="item_img">
                 <p>Sahumador de ceramica</p>
             </div>
-        </div>
-    </div>
+        </article>
+    </section>
 
-
-    <div class="container">
-        <div class="row justify-content-center">
+    <section class="container">
+        <article class="row justify-content-center">
             <section id="sahumos"></section>
             <h3>Sahumos y defumadores</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
@@ -151,8 +151,10 @@
                 <img src="img/prod-velitas.png" alt="Velitas" class="item_img">
                 <p>Mini Velitas de madera</p>
             </div>
-        </div>
-    </div>
+        </article>
+    </section>
+
+    <!-- footer  -->
 
     <footer>
         <div class="foot">
