--- a/contacto.html
+++ b/contacto.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
-    <meta name="keywords" content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+    <meta name="description"
+        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="keywords"
+        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Esencias y aromas naturales">
-    <meta property="og:description" content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+    <meta property="og:description"
+        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <!-- <meta property="og:image" content="url"> -->
 
@@ -26,61 +29,65 @@
 
 <body>
     <!-- header -->
-    <header>
 
+    <header>
         <div class="barra">
             <div class="logo">
                 <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
-   
-    <!-- inicio nav  -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotras.html">Nosotras</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="productos.html">
-                            Productos
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
-                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mayorista.html">Mayorista</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="info.html">+ Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
 
-    <div class="container">
-        <div class="row my-5 justify-content-center">
-            <div class="col-lg-6 col-md-10">
+        <!-- nav  -->
+
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotras.html">Nosotras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                                <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a>
+                                </li>
+                                <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mayorista.html">Mayorista</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="info.html">+ Info</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- main  -->
+
+    <main class="container">
+        <section class="row my-5 justify-content-center">
+            <article class="col-lg-6 col-md-10">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-md-6 col-sm-6">
                         <p class="contacto-tit">Contacto</p>
                         <div class="item_contacto">
                             <img src="logos/wa-icono.svg" alt="WP" widht=30 height=30>
@@ -95,28 +102,30 @@
                             <p>Recta Martinolli 7759</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 col-sm-6">
                         <p class="contacto-tit">Nuestas Redes Sociales</p>
                         <div class="item_redes">
                             <img src="logos/Insta-logo.png" alt="Instagram">
-                            <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="r-instagram">Seguinos en Instagram</a>
+                            <a href="https://www.instagram.com/ruh.esencia/" target="_blank"
+                                class="r-instagram">Seguinos en Instagram</a>
                         </div>
                         <div class="item_redes">
                             <img src="logos/Face-logo.png" alt="Facebook">
-                            <a href="https://www.facebook.com" target="_blank" class="r-facebook">Seguinos en Facebook</a>
+                            <a href="https://www.facebook.com" target="_blank" class="r-facebook">Seguinos en
+                                Facebook</a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 mt-5">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
-                                title="Ubicacion-mapa" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                class="mapa"></iframe>
+                                title="Ubicacion-mapa" width="600" height="450" style="border:0;" allowfullscreen=""
+                                loading="lazy" class="mapa"></iframe>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6 col-md-10">
+            </article>
+            <article class="col-lg-6 col-md-10">
                 <div class="form-container">
                     <p class="form-tit">Contactate con nosotras</p>
                     <form action="form.php" method="POST" class="contacto-form">
@@ -145,10 +154,11 @@
 
                     </form>
                 </div>
-            </div>
-        </div>
-    </div>
+            </article>
+        </section>
+    </main>
 
+    <!-- footer  -->
 
     <footer>
         <div class="foot">
@@ -173,7 +183,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
 
@@ -196,7 +206,7 @@
             </section>
         </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
