--- a/contacto.html
+++ b/contacto.html
@@ -91,7 +91,7 @@
                         <p class="contacto-tit">Contacto</p>
                         <div class="item_contacto">
                             <img src="logos/wa-icono.svg" alt="WP" widht=30 height=30>
-                            <p>+54 9 3512297942</p>
+                            <p class="wp-n">+54 9 3512297942</p>
                         </div>
                         <div class="item_contacto">
                             <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30>
@@ -105,12 +105,12 @@
                     <div class="col-md-6 col-sm-6">
                         <p class="contacto-tit">Nuestas Redes Sociales</p>
                         <div class="item_redes">
-                            <img src="logos/Insta-logo.png" alt="Instagram">
+                            <img src="logos/Insta-logo.png" alt="Instagram" widht=40 height=40>
                             <a href="https://www.instagram.com/ruh.esencia/" target="_blank"
                                 class="r-instagram">Seguinos en Instagram</a>
                         </div>
                         <div class="item_redes">
-                            <img src="logos/Face-logo.png" alt="Facebook">
+                            <img src="logos/Face-logo.png" alt="Facebook" widht=40 height=40>
                             <a href="https://www.facebook.com" target="_blank" class="r-facebook">Seguinos en
                                 Facebook</a>
                         </div>
